--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
       <artifactId>aspectjweaver</artifactId>
       <version>1.9.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <version>2.2.7.RELEASE</version>
+    </dependency>
 
   </dependencies>
   <build>
