--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
       <artifactId>spring-boot-devtools</artifactId>
       <version>2.2.7.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.0.Final</version>
+    </dependency>
+
 
   </dependencies>
   <build>
